--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -13,11 +13,11 @@
 	#header {
 		@include vendor('display', 'flex');
 		@include vendor('justify-content', 'space-between');
+		@include vendor('align-items', 'center');
 		background-color: _palette(bg);
 		border-bottom: solid 1px _palette(border);
 		height: 3.5em;
 		left: 0;
-		line-height: 3.5em;
 		position: fixed;
 		top: 0;
 		width: 100%;
@@ -41,7 +41,7 @@
 
 		h1 {
 			height: inherit;
-			line-height: inherit;
+			line-height: 3.5em;
 			padding: 0 0 0 1.5em;
 			white-space: nowrap;
 
@@ -54,7 +54,7 @@
 			@include vendor('flex', '1');
 			border-left: solid 1px _palette(border);
 			height: inherit;
-			line-height: inherit;
+			line-height: 3.5em;
 			margin-left: 1.5em;
 			overflow: hidden;
 			padding-left: 1.5em;
@@ -86,17 +86,17 @@
 
 		.main {
 			height: inherit;
-			line-height: inherit;
+			line-height: 3.5em;
 			text-align: right;
 
 			ul {
 				height: inherit;
-				line-height: inherit;
+				line-height: 3.5em;
 
 				li {
 					border-left: solid 1px _palette(border);
 					height: inherit;
-					line-height: inherit;
+					line-height: 3.5em;
 					white-space: nowrap;
 
 					> * {
@@ -117,7 +117,7 @@
 							display: block;
 							height: inherit;
 							left: 0;
-							line-height: inherit;
+							line-height: 3.5em;
 							position: absolute;
 							text-align: center;
 							text-indent: 0;
